Got stuck on mongo because I can't get the body content to update in the database. Looking for solutions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,15 @@
 <% include ./partials/header %>
+
 <h1>INDEX PAGE!!</h1>
 
 <% blogs.forEach(function(blog){ %>
     <div>
         <h2><%= blog.title %></h2>
-        <img src=" <%= blog.image %>" alt="Test Post" >
+        <img src=" <%= blog.image %> " alt="Test Post" >
         <span><%= blog.date %></span>
-        <p><% blog.body %></p>
+        <p><%= blog.body %></p>
+        <!-- shows single item -->
+        <a href="/blogs/<%= blog._id %>">Read More</a>
     </div>
 <% }) %>
 
