--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,16 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>Blog App</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/app.css">
 </head>
 <body>
-    <p>FROM THE HEADER FILE!</p>
+    <div class="ui fixed inverted menu">
+        <div class="ui container">
+            <div class="header item"><i class="idea icon"></i>Blog Site</div>
+            <a href="/" class="item">Home</a>
+            <a href="/blogs/new" class="item">New Post</a>
+        </div>
+    </div>
     
