--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 <% blogs.forEach(function(blog){ %>
     <div>
         <h2><%= blog.title %></h2>
-        <img src=" <%= blog.image %> " alt="Test Post" >
+        <img src="<%= blog.image %>">
         <span><%= blog.date %></span>
         <p><%= blog.body %></p>
         <!-- shows single item -->
