--- a/views/new.ejs
+++ b/views/new.ejs
@@ -13,7 +13,7 @@
         </div>
         <div class="field">
             <label>Blog Content</label>
-            <textarea class="blog[body]"></textarea>
+            <textarea name="blog[body]"></textarea>
         </div>
         <input class="ui violet basic button" type="submit">
     </form>
