--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,7 +4,7 @@
         <div class="ui huge header"><%= blog.title %></div>
         <div class="ui top attached">
             <div class="item">
-                <img class="ui centered rounbded image" src=" <%= blog.image %>" alt="Test Post">
+                <img class="ui centered rounded image" src=" <%= blog.image %>">
                 <div class="content">
                     <span><%= blog.date.toDateString() %></span>
                 </div>
