making progress nicely

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
         <h2><%= blog.title %></h2>
         <img src="<%= blog.image %>">
         <span><%= blog.date %></span>
-        <p><%= blog.body %></p>
+        <p><%= blog.body %>...</p>
         <!-- shows single item -->
         <a href="/blogs/<%= blog._id %>">Read More</a>
     </div>
